Sun Apr 10 12:04:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ndds_ts_default.mpb:
          Derive from the new ndds_cck_ts_defaults, we always use the CCK for
          dds4ccm

        * connectors/dds4ccm/tests/QueryCondition/DDS/Base/Base.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/DDS_Receiver.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Receiver/QC_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/DDS_Sender.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/QC_Sender.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/Base/Base_ObO.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/DDS_Receiver/DDS_ObO_Receiver.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/DDS_Receiver/ObO_Receiver.cpp:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/DDS_Sender/DDS_ObO_Sender.mpc:
        * connectors/dds4ccm/tests/QueryCondition/DDS_OneByOne/DDS_Sender/ObO_Sender.cpp:
          No need for the CCK and TAO, we just use ACE to get a portable
          main

Sun Apr 10 03:40:52 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/DAnCE/Launch-Failures/Component/Launch_Failure_exec.cpp:

          Compile error.

Sat Apr  9 17:47:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Fri Apr  8 13:57:42 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * connectors/dds4ccm/tests/SLManyByMany/descriptors/Plan.cdp:
                  Alignment.

                * connectors/dds4ccm/tests/SLOneByOne/Receiver/SL_OneByOne_Receiver_exec.cpp:
                * connectors/dds4ccm/tests/SLOneByOne/descriptors/Plan.cdp:
                  Added check on received sample during on_deletion. on_deletion should be invoked
                  with a valid key. Therefor changed the QOS settings.
